--- a/iOSapp/iOSapp/en.lproj/MainStoryboard.storyboard
+++ b/iOSapp/iOSapp/en.lproj/MainStoryboard.storyboard
@@ -61,13 +61,6 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LdB-ab-xDL">
-                                        <rect key="frame" x="0.0" y="29" width="280" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Birthdate:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lEz-9m-zB1">
                                         <rect key="frame" x="0.0" y="116" width="280" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -75,20 +68,33 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ctg-qo-WQ8">
-                                        <rect key="frame" x="0.0" y="145" width="280" height="21"/>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Loading..." borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" id="fGB-GG-QkP">
+                                        <rect key="frame" x="0.0" y="20" width="280" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zx0-VY-6Cn">
-                                        <rect key="frame" x="0.0" y="87" width="280" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="done"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pty-72-jfo" id="V8u-fF-HXx"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="1002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Loading..." borderStyle="roundedRect" placeholder="surname" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" id="3ZB-qH-Uqn">
+                                        <rect key="frame" x="0.0" y="78" width="280" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="done"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pty-72-jfo" id="YPt-NV-BK2"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="1003" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Loading..." borderStyle="roundedRect" placeholder="birthdate" textAlignment="center" minimumFontSize="17" id="Yj7-ps-bWz" customClass="RLCDateField">
+                                        <rect key="frame" x="0.0" y="136" width="280" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pty-72-jfo" id="71C-Rc-wKB"/>
+                                        </connections>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                             </view>
@@ -104,10 +110,9 @@
                                 <rect key="frame" x="96" y="20" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="2Ft-S6-atr">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="fb_blank_profile_square.png" id="2Ft-S6-atr">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.0" green="1" blue="0.032178035059999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" id="tRe-NE-6hs">
                                         <rect key="frame" x="54" y="54" width="20" height="20"/>
@@ -122,13 +127,13 @@
                     <tabBarItem key="tabBarItem" title="Profile" image="123-id-card.png" id="bmi-FA-AI8"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
-                        <outlet property="birthdateLabel" destination="ctg-qo-WQ8" id="UOC-PJ-QeY"/>
+                        <outlet property="birthdateText" destination="Yj7-ps-bWz" id="ysS-mN-8Ne"/>
                         <outlet property="fbLoginView" destination="JM9-2P-iMH" id="12D-l0-GKh"/>
-                        <outlet property="nameLabel" destination="LdB-ab-xDL" id="QJv-Pb-Fnw"/>
+                        <outlet property="nameText" destination="fGB-GG-QkP" id="BO4-sx-w3K"/>
                         <outlet property="photoContainer" destination="eYq-9c-eAO" id="TqF-Eq-dZP"/>
                         <outlet property="photoView" destination="2Ft-S6-atr" id="pxv-ML-FrV"/>
                         <outlet property="spinner" destination="tRe-NE-6hs" id="AMu-ZP-Mcn"/>
-                        <outlet property="surnameLabel" destination="zx0-VY-6Cn" id="gGe-CN-aMB"/>
+                        <outlet property="surnameText" destination="3ZB-qH-Uqn" id="VEg-97-0qK"/>
                         <outlet property="textContainer" destination="oJh-Yq-Bmm" id="3Pi-Pk-ZM8"/>
                     </connections>
                 </viewController>
@@ -262,6 +267,7 @@
         <image name="123-id-card.png" width="24" height="17"/>
         <image name="135-hockeymask.png" width="20" height="26"/>
         <image name="96-book.png" width="18" height="26"/>
+        <image name="fb_blank_profile_square.png" width="200" height="200"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
