--- a/iOSapp/iOSapp/en.lproj/MainStoryboard.storyboard
+++ b/iOSapp/iOSapp/en.lproj/MainStoryboard.storyboard
@@ -202,7 +202,7 @@
         <!--Friends View Controller - Friends-->
         <scene sceneID="b8Z-9U-CKk">
             <objects>
-                <viewController id="hCw-mo-8IR" customClass="FriendsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Friends" title="Friends" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hCw-mo-8IR" customClass="FriendsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9KQ-tn-nlZ">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
